--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,13 @@
 <main>
-  {{ title }}
+  <div>Count: {{ count }}</div>
+  <div>
+    <button  type="button" (click)="increase()">Add</button>
+    <button  type="button" (click)="reset()">Reset</button>
+  </div>
+  <div>Action: {{ action }}</div>
+  <div>
+    <button  type="button" (click)="load()">Load</button>
+    <button  type="button" (click)="save()">Save</button>
+  </div>
   <router-outlet></router-outlet>
 </main>
